# protonmail-cli

./: .gitignore  CLAUDE.md  README.md  pmail.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/: protonmail.md
src/protonmail_cli/: cli.py  config.py  formatting.py
tests/: test_cli.py  test_formatting.py
