[project]
name = "protonmail-cli"
dynamic = ["version"]
description = "CLI tool for reading and sending Proton Mail emails"
requires-python = ">=3.9"
dependencies = [
    "protonmail-api-client>=2.4.0",
    "click>=8.0",
    "rich>=13.0",
    "keyring>=24.0",
]

[project.scripts]
pmail = "protonmail_cli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.urls]
Repository = "https://github.com/heikki-laitala/protonmail-cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/protonmail_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/protonmail_cli"]

[tool.ruff]
exclude = ["src/protonmail_cli/_version.py"]
